# tablify

./: Cargo.toml  LICENSE  README.md  asset-manifest.json  index.html  manifest.json
.github/workflows/: build_binary.yml  deploy.yml
assets/: index-C9iMk95h.css  index-ClQ0DPT-.js  index-D3QRwFST.js  index-DI0aUw-C.js  index-DZKYmHyA.js  index-qltHAwW7.js  tablify_bg-BG-eK-LG.wasm  tablify_bg-BdYZgKFN.wasm  tablify_bg-CKZjUP9Z.wasm  tablify_bg-CQkHgbsa.wasm
src/: lib.rs  main.rs
static/css/: main.277fa738.chunk.css  main.277fa738.chunk.css.map  main.7deb70e7.chunk.css  main.7deb70e7.chunk.css.map  main.9b98ce11.chunk.css  main.9b98ce11.chunk.css.map  main.de9935cb.chunk.css  main.de9935cb.chunk.css.map
static/js/: 2.1eaf2cfc.chunk.js  2.1eaf2cfc.chunk.js.map  2.5bbafa03.chunk.js  2.5bbafa03.chunk.js.map  2.62492c40.chunk.js  2.62492c40.chunk.js.map  3.622aa342.chunk.js  3.622aa342.chunk.js.map  3.882d7e48.chunk.js  3.882d7e48.chunk.js.map  3.a2330784.chunk.js  3.a2330784.chunk.js.map  3.ce93f0de.chunk.js  3.ce93f0de.chunk.js.map  3.e073aa22.chunk.js  3.e073aa22.chunk.js.map  main.091bd62e.chunk.js  main.091bd62e.chunk.js.map  main.1032489c.chunk.js  main.1032489c.chunk.js.map  main.11cf1dfd.chunk.js  main.11cf1dfd.chunk.js.map  main.5748e4e0.chunk.js  main.5748e4e0.chunk.js.map  main.a2edfe0b.chunk.js  main.a2edfe0b.chunk.js.map  runtime-main.4fc689f3.js  runtime-main.4fc689f3.js.map  runtime-main.5198204c.js  runtime-main.5198204c.js.map  runtime-main.651b8627.js  runtime-main.651b8627.js.map  runtime-main.79310590.js  runtime-main.79310590.js.map  runtime-main.c0550ea3.js  runtime-main.c0550ea3.js.map
tests/: cli.rs  tests.rs
www/: index.html  package-lock.json  package.json  vite.config.ts
www/public/: index.html
www/src/: App.css  App.tsx  Utils.tsx  index.css  tablify.tsx
