[package]
name = "tablify"
version = "0.1.0"
authors = ["Yuki Suzuki <y-suzuki@radiol.med.osaka-u.ac.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1"
serde = "1"
encoding_rs = "0"
calamine = "0"
tera = { version = "1", default-features = false }

[dev-dependencies]
simple_excel_writer = "0"
assert_cmd = "1"
predicates = "1"
tempfile = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
# configs for wasm
opt-level = "z"
# panic = "abort"
lto = "fat"
