[package]
name = "tablify"
version = "0.1.0"
description = "Load tabular data and turn it into a html file."
authors = ["Yuki Suzuki <y-suzuki@radiol.med.osaka-u.ac.jp>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.3.0"
serde = "1.0.203"
encoding_rs = "0.8.34"
calamine = "0.25.0"
tera = { version = "1.19.1", default-features = false }
anyhow = "1.0.86"

[dev-dependencies]
simple_excel_writer = "0.2.0"
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"

[profile.release]
# configs for wasm
opt-level = "z"
# panic = "abort"
lto = "fat"
